[package]
name = "moto_spec"
version = "0.1.0"
authors = ["wangjun861205 <444055828@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
tokio = { version = "1.5", features = ["full"] }
url = "2.2.1"
mongodb = { version = "2.0.0-beta.1", default-features = false, features = ["sync"] }
async-recursion = "0.2"
futures = "*"
scraper = "0.12.0"
markup5ever = "*"
async-trait = "*"
